...
    Column(
        modifier = modifier
            .padding(16.dp)
    ) {
        TextSmallDesign(text = "VIGIA: $descrVigia")
        TextSmallDesign(text = "LOCAL: $descrLocal")
        TitleDesign(text = "MENU")
        LazyColumn(
            modifier = Modifier
                .fillMaxWidth()
                .weight(1f)
        ) {
            items(flows) { flow ->
...
                    Fluxo(
                        idFluxo = 2,
                        descrFluxo = "MOV. VEÍCULO VISITANTE/TERCEIRO"
                    ),
                    Fluxo(
                        idFluxo = 3,
                        descrFluxo = "MOV. VEÍCULO RESIDÊNCIA"
                    ),
                ),
                statusSend = StatusSend.SEND,
                descrVigia = "1975 - ANDERSON",
                descrLocal = "1 - USINA",
                flagDialogCheck = false,
...
