...
import br.com.usinasantafe.pcp.presenter.theme.AlertDialogSimpleDesign
import br.com.usinasantafe.pcp.presenter.theme.PCPTheme
import br.com.usinasantafe.pcp.presenter.theme.TextButtonDesign
import br.com.usinasantafe.pcp.presenter.theme.TitleDesign
import br.com.usinasantafe.pcp.lib.FlowApp

const val TAG_VEICULO_TEXT_FIELD_RESIDENCIA = "tag_veiculo_text_field_residencia"

@Composable
fun VeiculoResidenciaScreen(
    viewModel: VeiculoResidenciaViewModel = hiltViewModel(),
    onNavMovEquipList: () -> Unit,
    onNavDetalhe: () -> Unit,
...
