...
import br.com.usinasantafe.pcp.presenter.theme.AlertDialogSimpleDesign
import br.com.usinasantafe.pcp.presenter.theme.PCPTheme
import br.com.usinasantafe.pcp.presenter.theme.TextButtonDesign
import br.com.usinasantafe.pcp.presenter.theme.TitleDesign
import br.com.usinasantafe.pcp.lib.FlowApp

const val TAG_MOTORISTA_TEXT_FIELD_RESIDENCIA = "tag_motorista_text_field_residencia"

@Composable
fun MotoristaResidenciaScreen(
    viewModel: MotoristaResidenciaViewModel = hiltViewModel(),
    onNavPlaca: () -> Unit,
    onNavDetalhe: () -> Unit,
...
